--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
 
   <body>
-    <h1>弹跳彩球</h1>
+    <h1>大球吃小球</h1>
+    <p></p>
     <canvas></canvas>
 
     <script src="main.js"></script>
