change balls' amount

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
   <body>
     <h1>大球吃小球</h1>
-    <p></p>
+    <p class="score"></p>
     <canvas></canvas>
+
 
     <script src="main.js"></script>
   </body>
